# sin-simulator

./: .gitignore  Makefile  README.md  abstract_user.hh  basic_user.hh  common.hh  configure.ac  market.cc  market.hh  noop_user.hh  sin.cc  sin.hh  slot.cc  slot.hh  user.cc  user.hh
src/: Makefile.am  abstract_user.hh  allocation_analysis.hh  basic_user.cc  basic_user.hh  brute_force_user.cc  brute_force_user.hh  event.hh  flow.hh  flow_completion_time_user.cc  flow_completion_time_user.hh  interval.hh  link.hh  market.cc  market.hh  market_emulator.cc  market_emulator.hh  market_event.hh  market_simulator.cc  market_simulator.hh  meta_interval.hh  noop_user.hh  offer.hh  old_flow_completion_time_user.cc  old_flow_completion_time_user.hh  opportunity.hh  owner_user.cc  owner_user.hh  pending_message.hh  pretty_print.cc  pretty_print.hh  random_evil_user.cc  random_evil_user.hh  round_robin.hh  round_robin_simulator.hh  scarletbot.cc  scarletbot.hh  schedule.hh  shortest_remaining_time_first.hh  sin.cc  (+6 more)
src/plot/: gen_data.sh  gnuplot_mean_delay  plot.sh
src/plots/: plot.sh
